2010-03-30  Jean-Louis Martineau <martineau@zmanda.com>
	* VERSION: 3.2.0alpha.
	* configure.in: Call AMANDA_VERSION.
	* config/amanda/version.m4: Add AMANDA_VERSION.
	* config/amanda/config.m4: Add AMANDA_GET_GIT_INFO.

2010-03-30  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/driver.c: Retry direct to tape all aborted dump because
			       of missing holdingdisk space.

2010-03-29  Paul C. Mantz <pcmantz@zmanda.com>
	* server-src/amcleanup.pl server-src/amflush.c: updated amreport usage

2010-03-28  Dustin J. Mitchell <dustin@zmanda.com>
	* server-src/amvault.pl: update with Changer and Catalog API changes

2010-03-26  Dustin J. Mitchell <dustin@zmanda.com>
	* installcheck/Makefile.am: don't run amrecover test under
	  --without-restore

2010-03-26  Dustin J. Mitchell <dustin@zmanda.com>
	* application-src/ampgsql.pl: don't die when gnutar issues non-fatal
	  errors, e.g., "file changed as we read it"

2010-03-26  Dustin J. Mitchell <dustin@zmanda.com>
	* installcheck/amrecover.pl: fix stupid error in installcheck

2010-03-26  Dustin J. Mitchell <dustin@zmanda.com>
	* application-src/ampgsql.pl: change 'confess' to 'die' and add a hack
	  to force WAL file archives on ancient postgres versions
	* installcheck/ampgsql.pl: don't skip tests on ancient versions

2010-03-26  Dustin J. Mitchell <dustin@zmanda.com>
	* common-src/Makefile.am common-src/match-test.c: test (some) match
	  functions
	* common-src/match.c: add make_exact_disk_expression and
	  make_exact_host_expression
	* installcheck/Installcheck/Dumpcache.pm: add amrecover_changer
	* installcheck/Makefile.am installcheck/amrecover.pl: new integration
	  tests
	* oldrecover-src/extract_list.c recover-src/extract_list.c: use the
	  make_exact_.. functions
	* common-src/amanda.h common-src/match.h application-src/amgtar.c
	  application-src/amstar.c client-src/calcsize.c client-src/sendbackup.c
	  client-src/sendsize.c common-src/amxml.c common-src/fileheader.c